# RessourceEmbSysProject

./: .gitignore  README (1).md  README.md  README_easy.cpp.md  analize_easy.ipynb  baseCode.cpp  easy_tuning.cpp  flake.nix  meson.build  plateform.xml  requirements.txt  resampling.py  resamplingEasyGeneration.py  run.sh  runAll.sh
analysis/resampling/outputs/: UserModelling.json  ogTraceStats.json  resamplesTraceStats.json
analysis/resampling/scripts/: analysis.py  dataRestructuration.py  plottingResample.py  resampleAnalysis.py
analysis/results/: compareT.py  plotting.py
analysis/results/scripts/: evalysTest.py  plotPolicyPerformance.py  plotTrainVSTest.py  plotanotherone.py  thresholdPolicyPerformance.py  utils.py
assets/: kth_machine.xml  kth_subset_jobs.json  plateform.xml  testInput.json  trainInput.json
outputs/test/T0/EXP_EXP_T0/: schedule.json
outputs/test/T0/EXP_FCFS_T0/: schedule.json
outputs/test/T0/EXP_LCFS_T0/: schedule.json
outputs/test/T0/EXP_LPF_T0/: schedule.json
outputs/test/T0/EXP_LQF_T0/: schedule.json
outputs/test/T0/EXP_SPF_T0/: schedule.json
outputs/test/T0/EXP_SQF_T0/: schedule.json
outputs/test/T0/FCFS_EXP_T0/: schedule.json
outputs/test/T0/FCFS_LPF_T0/: schedule.json
outputs/test/T0/FCFS_LQF_T0/: schedule.json
outputs/test/T0/FCFS_SQF_T0/: schedule.json
outputs/test/T0/LCFS_EXP_T0/: schedule.json
outputs/test/T0/LCFS_FCFS_T0/: schedule.json
resampling/: resampling.py  testSubs.json  trainSubs.json  weeklyActivity.json
scripts/: kth_to_batsim.py
src/: batsim_edc.h  easy.cpp  easy_tuning.cpp
(+157 files in other folders)
